# cs2-market-data-engine

./: .gitignore  README.md  output.txt  package-lock.json  requirements.txt  start.sh
data_fetch/: README.md  __init__.py  bitskins_client.py  market_fetcher.py  routes.py  steam_client.py  storage.py
data_fetch/api/: __init__.py  routes.py
data_fetch/bitskins/: bitskins_client.py
data_fetch/buff163/: buff163_client.py
data_fetch/cache/: redis.py
data_fetch/config/: config.py
data_fetch/core/: __init__.py  market_fetcher.py  storage.py
data_fetch/dmarket/: dmarket_client.py
data_fetch/model/: redis.py  storage.py
data_fetch/services/: __init__.py
data_fetch/services/bitskins/: client.py
data_fetch/services/buff163/: buff163_client.py  client.py
data_fetch/services/steam/: client.py
data_fetch/services/steam_experimental/: bid_ask_data.csv  steam_experimental_client.py
data_fetch/services/steamwebapi/: steamwebapi_client.py
data_fetch/steam/: steam_client.py
data_fetch/steamapis/: steamapis_client.py
data_fetch/steamwebapi/: steamwebapi_client.py
data_fetch/types/: cs2.py
engine/: CMakeLists.txt  README.md
engine/src/: main.cc  pricing.cc
gui/: 730_ITEMNAMES.txt  gui.py
proto/: README.md
proto/engine/: pricing.proto  state.proto
tests/: README.md
webapp/: README.md  package-lock.json  package.json
webapp/public/: index.html
webapp/src/: app.tsx
